--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -39,7 +39,7 @@
         <ul>
           <li>
             <a href="https://www.facebook.com/aecci.ucr/" class="text-footer" target="_blank"><i class="fa fa-facebook highligh-footer"></i>
-              Hazte fan</a>
+              Síguenos en Facebook</a>
           </li>
           <li>
             <a href="mailto:aecci.ucr@gmail.com" class="text-footer"><i class="fa fa-envelope highligh-footer"></i> aecci.ucr@gmail.com</a>
