--- a/app/views/layouts/_section_asocia.erb
+++ b/app/views/layouts/_section_asocia.erb
@@ -36,8 +36,7 @@
       </div>
       <div class="row">
         <div class="col-xs-6 col-md-2 col-md-offset-4">
-          <%= link_to 'Hablemos', root_url<<'#contact', class: 'btn btn-primary btn-block' %>
-          <!-- TODO enlazar al sitio de contactenos -->
+          <%= link_to 'Hablemos', contact_us_path , class: 'btn btn-primary btn-block' %>
         </div>
         <div class="col-xs-6 col-md-2">
           <%= link_to 'Conócenos', about_us_url, class: 'btn btn-default btn-block' %>
