--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -91,7 +91,7 @@
               <div class="row">
                 <div class="col-xs-12">
                   <div class="pull-right">
-                    <%= f.submit class: 'btn btn-primary' %>
+                    <%= f.submit class: 'btn btn-primary', id: 'btn_submit' %>
                   </div>
                 </div>
               </div>
