--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Course', new_course_path %>
+<%= link_to 'New Course', new_course_path, remote: true, class: "btn btn-primary" %>
