--- a/app/views/layouts/_section_asocia.erb
+++ b/app/views/layouts/_section_asocia.erb
@@ -11,21 +11,31 @@
           </h1>
         </div>
         <div class="col-xs-12 col-md-5">
-          <p class="info-asocia">laksldkandlkasd laksdlaksjdla dlaksmdlaksmdla dlaksmdlaksd laskdmlaksdmla
-            dlkdaslkdmalsd alksdmlaksd
-            alskdmlaksd laksmdlaksd alksmdlaksd laksmdlasd laksmd.
+          <p class="info-asocia">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Integer posuere erat a ante. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Integer posuere erat a ante.
           </p>
           <br/>
           <p class="info-asocia">
-            asodkanmkd aksndmlaskdmla dlaksmdlaksd laksdmoaks dlam sdlkamsdlakmsdl alsdkmalksdmla sdlksamldamls
-            alskdmalskd asodjqouiduioqew dowiedwu iwuedhjiw idwuhe iqw qi dqiu diq diasdia. oajsoa oaijoiqwodq oqiwjdq
-            oqiwjdoq doqiwjdoq doqiwjdoq doqiwjdoq doqiwjdoq doqiwndoqd.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Integer posuere erat a ante. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Integer posuere erat a ante.
           </p>
           <br/>
           <p class="info-asocia">
-            asodkanmkd aksndmlaskdmla dlaksmdlaksd laksdmoaks dlam sdlkamsdlakmsdl alsdkmalksdmla sdlksamldamls
-            alskdmalskd asodjqouiduioqew dowiedwu iwuedhjiw idwuhe iqw qi dqiu diq diasdia. aoidoaisd qoiwdoqw doqiwdoq
-            qoiwdjqo doqiwjdoq wdounicus aoisjdoasdi asodijaosd.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Integer posuere erat a ante. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Integer posuere erat a ante.
           </p>
         </div>
       </div>
