--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,29 +1,39 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h1>Cursos impartidos en la ECCI</h1>
+    <hr/>
+  </div>
+</div>
 
-<h1>Listing Courses</h1>
+<% if current_user && current_user.admin? %>
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <%= link_to 'Nuevo Curso', new_course_path, remote: true, class: 'btn btn-primary' %>
+      </div>
+    </div>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Initials</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <%# Itera sobre cada año %>
+      <% @years_of_courses.sort.each do |year, courses| %>
+          <%# Acordión para cada año lectivo %>
+          <% title = "#{romanize year} Año" %>
+          <% heading_id = "heading_#{year}" %>
+          <% collapse_id = "collapse_#{year}" %>
 
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-        <td><%= course.name %></td>
-        <td><%= course.initials %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <%= render layout: 'shared/accordion', locals: {title: title, heading_id: heading_id, expand: false, collapse_id: collapse_id} do %>
+              <%# Itera por cada curso que pertenece a un año %>
+              <% courses.each do |course| %>
+                  <%# TODO: Botones con el link de cada curso %>
+                  <p>Nombre del curso es: <%= course.name %>.</p>
+                  <p>Las iniciales son: <%= course.initials %>.</p>
+                  <hr/>
+              <% end %>
+          <% end %>
 
-<br>
-
-<%= link_to 'New Course', new_course_path, remote: true, class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
