--- a/app/views/shared/_modal.erb
+++ b/app/views/shared/_modal.erb
@@ -1,24 +1,18 @@
-<div id="course-modal" class="modal fade">
+<div class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title"><%= title %></h4>
       </div>
-      <%= form_for @course, remote: true do |f| %>
-        <div class="modal-body">
-          <div class="form-group">
-            <%= f.text_field :initials, class: "form-control input-lg", placeholder: "Siglas del curso" %>
+      <div class="modal-body">
+        <%= yield %>
+      </div>
+      <% if content_for?(:modal_footer) %>
+          <div class="modal-footer">
+            <%= yield(:modal_footer) %>
           </div>
-          <div class="form-group">
-            <%= f.text_field :name, class: "form-control input-lg", placeholder: "Nombre del curso" %>
-          </div>
-          <!-- TODO: Anio del curso -->
-        </div>
-
-        <div class="modal-footer">
-          <%= f.submit class: "btn btn-primary btn-lg btn-block" %>
-        </div>
       <% end %>
     </div>
   </div>
