--- a/app/views/users_administration/index.html.erb
+++ b/app/views/users_administration/index.html.erb
@@ -1,63 +1,65 @@
-<div class="row">
-  <div class="col-md-10 col-md-offset-1 col-xs-12">
-    <h1>Administración de usuarios</h1>
-    <hr/>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-8 col-md-offset-2 col-xs-12">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-            <h2>Usuarios</h2>
-            <hr/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-            <table class="table table-striped">
-              <thead>
-              <tr>
-                <th>Correo electrónico</th>
-                <th class="center-cell">¿Administrador?</th>
-                <th></th>
-              </tr>
-              </thead>
-              <tbody>
-              <% @users.each do |user| %>
-                  <tr>
-                    <td><%= user.email %></td>
-                    <td class="center-cell">
-                      <% if user.admin? %>
-                          <span><span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Administrador</span>
-                      <% else %>
-                          <%= link_to make_admin_path(user), method: :put do %>
-                              <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Hacer administrador</span>
-                          <% end %>
-                      <% end %>
-                    </td>
-                    <td class="center-cell">
-                      <%= link_to admin_destroy_user_path(user), method: :delete, data: {confirm: "¿Esta seguro que desea eliminar a "<<user.email<<" del sistema?"} do %>
-                          <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
-                      <% end %>
-                    </td>
-                  </tr>
+<%# Administradores %>
+<%= render layout: 'shared/centered_panel', locals: {title: 'Administradores'} do %>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Correo electrónico</th>
+        <th class="center-cell">Autorización</th>
+        <th class="center-cell">Acciones</th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @admins.each do |admin| %>
+          <tr>
+            <td><%= admin.email %></td>
+            <td class="center-cell">
+              <%= link_to toggle_admin_path(admin), method: :put do %>
+                  <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Revocar</span>
               <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <hr/>
-</div>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3 col-xs-12">
-    <%= will_paginate @users, renderer: BootstrapPagination::Rails %>
-  </div>
-</div>
+            </td>
+            <td class="center-cell">
+              <%= link_to admin_destroy_user_path(admin), method: :delete, data: {confirm: "¿Esta seguro que desea eliminar a "<<admin.email<<" del sistema?"} do %>
+                  <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
+              <% end %>
+            </td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+<% end %>
+
+<%# Estudiantes %>
+<%= render layout: 'shared/centered_panel', locals: {title: 'Estudiantes'} do %>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Correo electrónico</th>
+        <th class="center-cell">Autorización</th>
+        <th class="center-cell">Acciones</th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @users.each do |user| %>
+          <tr>
+            <td><%= user.email %></td>
+            <td class="center-cell">
+              <%= link_to toggle_admin_path(user), method: :put do %>
+                  <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Hacer administrador</span>
+              <% end %>
+            </td>
+            <td class="center-cell">
+              <%= link_to admin_destroy_user_path(user), method: :delete, data: {confirm: "¿Esta seguro que desea eliminar a "<<user.email<<" del sistema?"} do %>
+                  <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
+              <% end %>
+            </td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+
+    <% content_for :outside_panel do %>
+        <%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+    <% end %>
+<% end %>
+
 
