--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<% if current_user && current_user.admin? %>
+<% if user_signed_in? && current_user.admin? %>
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <%= link_to 'Nuevo Curso', new_course_path, remote: true, class: 'btn btn-primary' %>
