--- a/app/views/users_administration/index.html.erb
+++ b/app/views/users_administration/index.html.erb
@@ -1,3 +1,9 @@
+<div class="row">
+  <div class="col-md-4 col-md-offset-3">
+    <%= render 'search' %>
+  </div>
+</div>
+
 <%# Administradores %>
 <%= render layout: 'shared/centered_panel', locals: {title: 'Administradores'} do %>
     <table class="table table-striped">
@@ -13,13 +19,17 @@
           <tr>
             <td><%= admin.email %></td>
             <td class="center-cell">
-              <%= link_to toggle_admin_path(admin), method: :put do %>
-                  <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Revocar</span>
+              <% unless current_user.email == admin.email %>
+                  <%= link_to toggle_admin_path(admin), method: :put do %>
+                      <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Revocar</span>
+                  <% end %>
               <% end %>
             </td>
             <td class="center-cell">
-              <%= link_to admin_destroy_user_path(admin), method: :delete, data: {confirm: "¿Esta seguro que desea eliminar a "<<admin.email<<" del sistema?"} do %>
-                  <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
+              <% unless current_user.email == admin.email %>
+                  <%= link_to admin_destroy_user_path(admin), method: :delete, data: {confirm: "¿Está seguro que desea eliminar a #{admin.email} del sistema?"} do %>
+                      <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
+                  <% end %>
               <% end %>
             </td>
           </tr>
@@ -30,32 +40,40 @@
 
 <%# Estudiantes %>
 <%= render layout: 'shared/centered_panel', locals: {title: 'Estudiantes'} do %>
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th>Correo electrónico</th>
-        <th class="center-cell">Autorización</th>
-        <th class="center-cell">Acciones</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @users.each do |user| %>
+    <% if @users.empty? %>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <h2 class="center">No se encontraron resultados</h2>
+          </div>
+        </div>
+    <% else %>
+        <table class="table table-striped">
+          <thead>
           <tr>
-            <td><%= user.email %></td>
-            <td class="center-cell">
-              <%= link_to toggle_admin_path(user), method: :put do %>
-                  <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Hacer administrador</span>
-              <% end %>
-            </td>
-            <td class="center-cell">
-              <%= link_to admin_destroy_user_path(user), method: :delete, data: {confirm: "¿Esta seguro que desea eliminar a "<<user.email<<" del sistema?"} do %>
-                  <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
-              <% end %>
-            </td>
+            <th>Correo electrónico</th>
+            <th class="center-cell">Autorización</th>
+            <th class="center-cell">Acciones</th>
           </tr>
-      <% end %>
-      </tbody>
-    </table>
+          </thead>
+          <tbody>
+          <% @users.each do |user| %>
+              <tr>
+                <td><%= user.email %></td>
+                <td class="center-cell">
+                  <%= link_to toggle_admin_path(user), method: :put do %>
+                      <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Hacer administrador</span>
+                  <% end %>
+                </td>
+                <td class="center-cell">
+                  <%= link_to admin_destroy_user_path(user), method: :delete, data: {confirm: "¿Esta seguro que desea eliminar a "<<user.email<<" del sistema?"} do %>
+                      <span class="text-danger glyphicon glyphicon-erase" aria-hidden="true"></span>
+                  <% end %>
+                </td>
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
+    <% end %>
 
     <% content_for :outside_panel do %>
         <%= will_paginate @users, renderer: BootstrapPagination::Rails %>
