--- a/app/views/courses/professors.erb
+++ b/app/views/courses/professors.erb
@@ -14,11 +14,10 @@
 </div>
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <p>A continuación se le presenta la lista de profesores que han dado el curso <%= @course.name %> y de
-          los que se tiene material disponible para consulta.</p>
-      </div>
+    <div class="bs-callout bs-callout-primary">
+      <h4>Información</h4>
+      <p>A continuación se le presenta la lista de profesores que han dado el curso <%= @course.name %> y de
+        los que se tiene material disponible para consulta.</p>
     </div>
   </div>
 </div>
