--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -49,3 +49,10 @@
     </div>
   </div>
 </div>
+<% if user_signed_in? && current_user.admin? %>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <%= link_to 'Agregar un examen nuevo', new_test_path, class: 'btn btn-primary' %>
+      </div>
+    </div>
+<% end %>
