--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -1,41 +1,41 @@
 <%= form_for(@test) do |f| %>
-  <% if @test.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@test.errors.count, "error") %> prohibited this test from being saved:</h2>
+    <% if @test.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@test.errors.count, "error") %> prohibited this test from being saved:</h2>
 
-      <ul>
-      <% @test.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @test.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :year %><br>
+      <%= f.text_field :year %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :year %><br>
-    <%= f.text_field :year %>
-  </div>
-  <div class="field">
-    <%= f.label :teacher %><br>
-    <%= f.text_field :teacher %>
-  </div>
-  <div class="field">
-    <%= f.label :semester %><br>
-    <%= f.text_field :semester %>
-  </div>
-  <div class="field">
-    <%= f.label :test_number %><br>
-    <%= f.text_field :test_number %>
-  </div>
-  <div class="field">
-    <%= f.label :file_url %><br>
-    <%= f.text_field :file_url %>
-  </div>
-  <div class="field">
-    <%= f.label :course_id %><br>
-    <%= f.text_field :course_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="field">
+      <%= f.label :teacher %><br>
+      <%= f.text_field :teacher %>
+    </div>
+    <div class="field">
+      <%= f.label :semester %><br>
+      <%= f.text_field :semester %>
+    </div>
+    <div class="field">
+      <%= f.label :test_number %><br>
+      <%= f.text_field :test_number %>
+    </div>
+    <div class="field">
+      <%= f.label :file_url %><br>
+      <%= f.file_field :file_url %>
+    </div>
+    <div class="field">
+      <%= f.label :course_id %><br>
+      <%= f.text_field :course_id %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
 <% end %>
