--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -1,15 +1,4 @@
 <%= form_for(@test) do |f| %>
-    <% if @test.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@test.errors.count, "error") %> prohibited this test from being saved:</h2>
-
-          <ul>
-            <% @test.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
 
     <div class="field">
       <%= f.label :year %><br>
@@ -17,7 +6,7 @@
     </div>
     <div class="field">
       <%= f.label :teacher %><br>
-      <%= f.text_field :teacher %>
+      <%= f.collection_select :teacher, Test.order(:teacher), :teacher, :teacher, {prompt: 'Seleccione un profesor'}, {class:'form-control'}%>
     </div>
     <div class="field">
       <%= f.label :semester %><br>
@@ -33,7 +22,9 @@
     </div>
     <div class="field">
       <%= f.label :course_id %><br>
-      <%= f.text_field :course_id %>
+      <div class="form-group">
+        <%= f.collection_select :course_id, Course.order(:name), :id, :name, {prompt: 'Seleccione un curso'}, {class:'form-control'}%>
+      </div>
     </div>
     <div class="actions">
       <%= f.submit %>
