--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,9 @@
   <%= yield %>
   <br/>
   <%# Información para modo desarrollo %>
-  <!--
   <br/>
   <br/>
-  <%= debug(params) if Rails.env.development? %>-->
+  <%= debug(params) if Rails.env.development? %>
 </div>
 
 <%= render 'layouts/footer' %>
